k8s/packing/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: packing
  namespace: backend
spec:
  hosts:
  - "*"  # Permitir tráfego externo de qualquer IP/Domínio
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /backend/packing/api/
    rewrite:
      uri: "/api/"  # Encaminha tudo para o context-path do Spring Boot
    route:
    - destination:
        host: packing.backend.svc.cluster.local
        port:
          number: 8080
